--- a/document14.tex
+++ b/document14.tex
@@ -237,7 +237,7 @@ Now, considering the coefficient matrix $A$:
 Now, 
 \begin{align}
 \myvec{1 & 0 & -\frac{1}{3} & \frac{4}{3}\\0 & 1 & \frac{2}{3} & \frac{1}{3}\\0 & 0 & 0 & 0\\0 & 0 & 0 & 0} \myvec{C_1\\C_2\\C_3\\C_4} = \myvec{0\\0\\0\\0}\\
-\implies \myvec{C_1\\C_2\\C_3\\C_4} = C_3 \myvec{\frac{1}{3}\\-\frac{2}{3}\\1\\0} +C_4 \myvec{-\frac{4}{3}\\-\frac{1}{3}\\0\\1}
+\implies \vec{C} = C_3 \myvec{\frac{1}{3}\\-\frac{2}{3}\\1\\0} +C_4 \myvec{-\frac{4}{3}\\-\frac{1}{3}\\0\\1}
 \end{align}
 
 As 
