--- a/document14.tex
+++ b/document14.tex
@@ -211,15 +211,10 @@ Are the vector:
 \vec{\alpha_4} = (2,1,1,6)
 \end{align}
 linear independent in $R^4$ ?
-
 \section{Explanation}
 Now,
 \begin{align}
-C_1 \vec{\alpha_1} +C_2 \vec{\alpha_2}+C_3 \vec{\alpha_3}+C_4 \vec{\alpha_4} = \vec{0}\\
-\implies C_1 + 2C_2 + C_3 + 2C_4 =0\\
-C_1 - C_2 - C_3 + C_4 =0\\
-2C_1 - 5C_2 - 4C_3 + C_4 =0\\
-4C_1 + 2C_2 + 0C_3 + 6C_4 =0
+C_1 \vec{\alpha_1} +C_2 \vec{\alpha_2}+C_3 \vec{\alpha_3}+C_4 \vec{\alpha_4} = \vec{0}
 \end{align}
 So, 
 \begin{align}
@@ -237,14 +232,9 @@ Now, considering the coefficient matrix $A$:
 Now, 
 \begin{align}
 \myvec{1 & 0 & -\frac{1}{3} & \frac{4}{3}\\0 & 1 & \frac{2}{3} & \frac{1}{3}\\0 & 0 & 0 & 0\\0 & 0 & 0 & 0} \myvec{C_1\\C_2\\C_3\\C_4} = \myvec{0\\0\\0\\0}\\
-\implies \vec{C} = C_3 \myvec{\frac{1}{3}\\-\frac{2}{3}\\1\\0} +C_4 \myvec{-\frac{4}{3}\\-\frac{1}{3}\\0\\1}
+\implies \vec{C} = C_3 \myvec{\frac{1}{3}\\-\frac{2}{3}\\1\\0} +C_4 \myvec{-\frac{4}{3}\\-\frac{1}{3}\\0\\1} \neq \vec{0}
 \end{align}
-
-As 
-\begin{align}
-C_1, C_2, C_3, C_4 \neq 0
-\end{align}
-for $C_1 \vec{\alpha_1} +C_2 \vec{\alpha_2}+C_3 \vec{\alpha_3}+C_4 \vec{\alpha_4} = \vec{0}$, so, the vectors are linearly dependent in the vector space $R^4$.
+So, the vectors are linearly dependent in the vector space $R^4$.
 
 %Hence, it is proved that there there exist a matrix $C$ such that $CA=B$.
 %\renewcommand{\theequation}{\theenumi}
